Adapt for Artivain Games

--- a/css/freecell.css
+++ b/css/freecell.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #eeeeee;
+    background-color: #444;
     font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
     font-size: 0.8em;
+		color: #fff;
 }
 
 h1 {
